--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
-  // "compilerOptions": {
-  //   "jsx": "preserve"
-  // }
+  ],
+  "compilerOptions": {
+    "jsx": "preserve"
+  }
 }
